<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeScreen">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background" />


    <TextView
        android:id="@+id/rand_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:onClick="goToRandom"
        android:text="@string/rand_ques_btn"
        android:textAlignment="center"
        android:textColor="#4A4747"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <TextView
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:onClick="goToCustomizing"
        android:text="@string/custom_ques_btn"
        android:textAlignment="center"
        android:textColor="#4A4747"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rand_button" />


</androidx.constraintlayout.widget.ConstraintLayout>